updating tmux conf with additions from benmills

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,18 @@
+# General
+set -s escape-time 0
+bind-key Tab last-window
+bind ^k confirm kill-session
+bind K confirm kill-server
+bind x kill-pane
+bind X kill-window
+set -g update-environment "DISPLAY WINDOWID SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION"
+set -g status-utf8 on
+setw -g mode-keys vi 
+
+# open a man page in new window
+bind / command-prompt "split-window 'exec man %%'"
+bind N command-prompt "new-window -n '%%'"
+
 # split windows like vim
 # vim's definition of a horizontal/vertical split is reversed from tmux's
 bind s split-window -v
@@ -20,21 +35,56 @@ bind ^l select-pane -R
 # resize panes like vim
 # feel free to change the "1" to however many lines you want to resize by, only
 # one at a time can be slow
-bind < resize-pane -L 1
-bind > resize-pane -R 1
-bind - resize-pane -D 1
-bind + resize-pane -U 1
+bind < resize-pane -L 3
+bind > resize-pane -R 3
+bind - resize-pane -D 3
+bind + resize-pane -U 3
 
 # bind : to command-prompt like vim
 # this is the default in tmux already
 bind : command-prompt
 
-# vi-style controls for copy mode
-setw -g mode-keys vi
+# session management
+bind C new-session
+bind L choose-session
 
 # Set the prefix to ^A.
 unbind C-b
-set -g prefix ^A
+set -g prefix ^a
 bind a send-prefix
 
-set -g update-environment "DISPLAY WINDOWID SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION"
+set -g status-justify left
+set -g status-left ''
+set -g status-right "#[fg=black, bright] #[fg=magenta,bright]#S#[fg=default]#[fg=black] • #[fg=blue]#H#[fg=default]#[fg=black] • #[fg=cyan]%D %I:%M#[fg=black] • #[fg=green]#(battery)"
+set -g status-left-length 200
+set -g status-right-length 200
+
+# default statusbar colors
+set -g status-fg yellow
+set -g status-bg default
+set -g status-attr dim
+
+# default window title colors
+set-window-option -g window-status-fg black
+set-window-option -g window-status-current-attr dim
+set-window-option -g window-status-format '#[fg=black, bright]#I⋮#[fg=black, default]#W '
+
+# active window title colors
+set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-fg blue
+set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-format '#[fg=black]#[fg=blue]#I#[fg=black]⋮#[fg=cyan]#W#[fg=black] ' 
+
+# command/message line colors
+set -g message-fg white
+set -g message-bg black
+set -g message-attr bright
+
+set-option -g pane-border-fg black
+set-option -g pane-active-border-fg black
+
+# reload tmux config file with C-a r
+bind r source ~/.tmux.conf
+
+# reload tmux config file with C-a r
+bind b source ~/bt/system-scripts/pairing_stations/tmux.conf
