--- a/tmux.conf
+++ b/tmux.conf
@@ -7,7 +7,7 @@ bind x kill-pane
 bind X kill-window
 set -g update-environment "DISPLAY WINDOWID SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION"
 set -g status-utf8 on
-setw -g mode-keys vi 
+setw -g mode-keys vi
 
 # open a man page in new window
 bind / command-prompt "split-window 'exec man %%'"
@@ -66,22 +66,22 @@ set -g status-attr dim
 
 # default window title colors
 set-window-option -g window-status-fg black
-set-window-option -g window-status-current-attr dim
-set-window-option -g window-status-format '#[fg=black, bright]#I⋮#[fg=black, default]#W '
+set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-format '#[fg=black, bright]#I⋮#[fg=black, bright]#W '
 
 # active window title colors
 set-window-option -g window-status-current-attr bright
 set-window-option -g window-status-current-fg blue
 set-window-option -g window-status-current-attr bright
-set-window-option -g window-status-current-format '#[fg=black]#[fg=blue]#I#[fg=black]⋮#[fg=cyan]#W#[fg=black] ' 
+set-window-option -g window-status-current-format '#[fg=black]#[fg=blue]#I#[fg=black]⋮#[fg=cyan]#W#[fg=black] '
 
 # command/message line colors
 set -g message-fg white
 set -g message-bg black
 set -g message-attr bright
 
-set-option -g pane-border-fg black
-set-option -g pane-active-border-fg black
+set-option -g pane-border-fg white
+set-option -g pane-active-border-fg yellow
 
 # reload tmux config file with C-a r
 bind r source ~/.tmux.conf
