--- a/zsh/config
+++ b/zsh/config
@@ -14,4 +14,6 @@ compinit
 export PROMPT='%m:%~%# '
 export TERM=xterm-256color
 
-[[ -s "/home/$USER/.rvm/scripts/rvm" ]] && source "/home/$USER/.rvm/scripts/rvm"
+export PATH=/usr/local/bin:$PATH
+
+[[ -s "/Users/$USER/.rvm/scripts/rvm" ]] && source "/Users/$USER/.rvm/scripts/rvm"
