added new aliases

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,7 @@ bind X kill-window
 set -g update-environment "DISPLAY WINDOWID SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION"
 set -g status-utf8 on
 setw -g mode-keys vi
+set -g default-terminal "screen-256color"
 
 # open a man page in new window
 bind / command-prompt "split-window 'exec man %%'"
@@ -85,6 +86,3 @@ set-option -g pane-active-border-fg yellow
 
 # reload tmux config file with C-a r
 bind r source ~/.tmux.conf
-
-# reload tmux config file with C-a r
-bind b source ~/bt/system-scripts/pairing_stations/tmux.conf
