--- a/tmux.conf
+++ b/tmux.conf
@@ -56,7 +56,7 @@ bind a send-prefix
 
 set -g status-justify left
 set -g status-left ''
-set -g status-right "#[fg=black, bright] #[fg=magenta,bright]#S#[fg=default]#[fg=black] • #[fg=blue]#H#[fg=default]#[fg=black] • #[fg=cyan]%D %I:%M#[fg=black] • #[fg=green]#(battery)"
+set -g status-right "#[fg=black, bright] #[fg=magenta,bright]#S#[fg=default]#[fg=black] • #[fg=cyan]#(TZ=America/Los_Angeles date +'%%D %%I:%%M%%p %%Z') | #(date +'%%D %I:%M%p %Z') #[fg=black]"
 set -g status-left-length 200
 set -g status-right-length 200
 
