--- a/zsh/config
+++ b/zsh/config
@@ -3,6 +3,7 @@ bindkey ^f vi-forward-word
 
 export GREP_OPTIONS='--color'
 export EDITOR=vim
+export GEM_HOME="$HOME/.gems/"
 
 HISTFILE=~/.zsh_history
 HISTSIZE=1000
@@ -14,7 +15,4 @@ compinit
 export PROMPT='%m:%~%# '
 export TERM=xterm-256color
 
-export PATH=/usr/local/bin:/usr/local/sbin/:$PATH
-
-eval "$(rbenv init -)"
-
+export PATH=$GEM_HOME/bin/:/usr/local/bin:/usr/local/sbin/:$PATH
