removed invalid tmux options / added an iex config

--- a/tmux.conf
+++ b/tmux.conf
@@ -55,33 +55,19 @@ bind a send-prefix
 
 set -g status-justify left
 set -g status-left ''
-set -g status-right "#[fg=black, bright] #[fg=magenta,bright]#S#[fg=default]#[fg=black] • #[fg=cyan]#(TZ=America/Los_Angeles date +'%%D %%I:%%M%%p %%Z') | #(date +'%%D %I:%M%p %Z') #[fg=black]"
+set -g status-right "#[fg=black, bright] #[fg=magenta,bright]#S#[fg=default]#[fg=black] • #[fg=cyan]#(TZ=America/Los_Angeles date +'%%D %%I:%%M%%p %%Z') #[fg=black]"
 set -g status-left-length 200
 set -g status-right-length 200
 
 # default statusbar colors
 set -g status-fg yellow
 set -g status-bg default
-set -g status-attr dim
 
 # default window title colors
-set-window-option -g window-status-fg black
-set-window-option -g window-status-current-attr bright
 set-window-option -g window-status-format '#[fg=black, bright]#I⋮#[fg=black, bright]#W '
 
 # active window title colors
-set-window-option -g window-status-current-attr bright
-set-window-option -g window-status-current-fg blue
-set-window-option -g window-status-current-attr bright
 set-window-option -g window-status-current-format '#[fg=black]#[fg=blue]#I#[fg=black]⋮#[fg=cyan]#W#[fg=black] '
-
-# command/message line colors
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
-
-set-option -g pane-border-fg white
-set-option -g pane-active-border-fg yellow
 
 # reload tmux config file with C-a r
 bind r source ~/.tmux.conf
