--- a/zsh/config
+++ b/zsh/config
@@ -1,18 +1,18 @@
 bindkey ^b vi-backward-word
 bindkey ^f vi-forward-word
 
-export GREP_OPTIONS='--color'
-export EDITOR=vim
-export GEM_HOME="$HOME/.gems/"
-
 HISTFILE=~/.zsh_history
 HISTSIZE=1000
 SAVEHIST=1000
 
-autoload -U compinit
-compinit
-
 export PROMPT='%m:%~%# '
 export TERM=xterm-256color
+export GREP_OPTIONS='--color'
+export EDITOR=vim
+export PATH=/usr/local/bin:/usr/local/sbin/:$PATH
 
-export PATH=$GEM_HOME/bin/:/usr/local/bin:/usr/local/sbin/:$PATH
+. $HOME/.asdf/asdf.sh
+fpath=(${ASDF_DIR}/completions $fpath)
+
+autoload -Uz compinit
+compinit
