cleaned up tmux conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,19 +9,13 @@ set -g update-environment "DISPLAY WINDOWID SSH_ASKPASS SSH_AGENT_PID SSH_CONNEC
 setw -g mode-keys vi
 set -g default-terminal "screen-256color"
 
-# open a man page in new window
-bind / command-prompt "split-window 'exec man %%'"
-bind N command-prompt "new-window -n '%%'"
 
-# split windows like vim
-# vim's definition of a horizontal/vertical split is reversed from tmux's
 bind s split-window -v
 bind v split-window -h
 
 bind ^s split-window -v
 bind ^v split-window -h
 
-# move around panes with hjkl, as one would in vim after pressing ctrl-w
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
@@ -32,42 +26,33 @@ bind ^j select-pane -D
 bind ^k select-pane -U
 bind ^l select-pane -R
 
-# resize panes like vim
-# feel free to change the "1" to however many lines you want to resize by, only
-# one at a time can be slow
 bind < resize-pane -L 3
 bind > resize-pane -R 3
 bind - resize-pane -D 3
 bind + resize-pane -U 3
 
-# bind : to command-prompt like vim
-# this is the default in tmux already
 bind : command-prompt
 
-# session management
 bind C new-session
 bind L choose-session
 
-# Set the prefix to ^A.
 unbind C-b
 set -g prefix ^a
 bind a send-prefix
 
 set -g status-justify left
 set -g status-left ''
-set -g status-right "#[fg=black, bright] #[fg=magenta,bright]#S#[fg=default]#[fg=black] • #[fg=cyan]#(TZ=America/Los_Angeles date +'%%D %%I:%%M%%p %%Z') #[fg=black]"
+set -g status-right "#[fg=#454eb8]#S#[fg=#ffffff] ◉ #[fg=#6d75c9]#(TZ=America/Los_Angeles date +'%%D %%I:%%M%%p %%Z') "
 set -g status-left-length 200
 set -g status-right-length 200
 
-# default statusbar colors
 set -g status-fg yellow
 set -g status-bg default
 
-# default window title colors
-set-window-option -g window-status-format '#[fg=black, bright]#I⋮#[fg=black, bright]#W '
+setw -g monitor-activity on
+set -g visual-activity on
 
-# active window title colors
-set-window-option -g window-status-current-format '#[fg=black]#[fg=blue]#I#[fg=black]⋮#[fg=cyan]#W#[fg=black] '
+set-window-option -g window-status-format '#[fg=#1e2250]#I #[fg=#262b65]#W '
+set-window-option -g window-status-current-format '#[fg=#acb0e0]#I #[fg=#eaebf7]#W '
 
-# reload tmux config file with C-a r
 bind r source ~/.tmux.conf
